--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-asgiref==3.2.10
-Django==3.1
-djangorestframework==3.11.1
-psycopg2==2.8.5
-pytz==2020.1
-sqlparse==0.3.1
+astroid==2.4.2
+colorama==0.4.4
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pylint==2.6.0
+six==1.15.0
+toml==0.10.1
+wrapt==1.12.1
